update docs 0.3.1 pt 2

--- a/docs/source/notebooks/example1.ipynb
+++ b/docs/source/notebooks/example1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate buildings and places around a real estate listing in Somerville, MA"
+    "## Evaluate buildings and places around a real estate listing in Somerville"
    ]
   },
   {
