--- a/docs/source/notebooks/example2.ipynb
+++ b/docs/source/notebooks/example2.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get public bathrooms in Providence (Foursquare ID is \"5744ccdfe4b0c0459246b4c4\")\n",
+    "# Get bagel shops (Foursquare ID is \"4bf58dd8d48988d179941735\")\n",
     "nyc_pb_gdf =fsq.foursquare_places_from_place(\"New York City\",filters=[(\"fsq_category_ids\",\"contains\",\"4bf58dd8d48988d179941735\")])"
    ]
   },
