--- a/docs/source/notebooks/example4.ipynb
+++ b/docs/source/notebooks/example4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find restaurants near a business hub for site suitability"
+    "## Find restaurants near a business hub for site suitability in Chicago"
    ]
   },
   {
@@ -14,14 +14,15 @@
    "outputs": [],
    "source": [
     "from pyplaces import overture_maps as om\n",
-    "from pyplaces import foursquare_open_places as fsq\n",
     "import folium"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "def plot_geodataframes(gdfs, zoom_start=15, popup_columns=None):\n",
@@ -76,9 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get all restaurants in the Near West Side\n",
     "gdf_food = om.overture_places_from_place(\"Near West Side, Chicago, IL\",filters=[(\"categories.primary\",\"contains\",\"eat_and_drink\")])\n",
     "\n",
-    "# Optional: filter buildings by height or area (example filters)\n",
+    "# Filter buildings by height\n",
     "gdf_buildings = om.overture_buildings_from_place(\n",
     "    address=\"Near West Side, Chicago, IL\",\n",
     "    filters=[(\"num_floors\", \">=\", 5)]\n",
