--- a/docs/source/notebooks/example3.ipynb
+++ b/docs/source/notebooks/example3.ipynb
@@ -113,15 +113,14 @@
     }
    ],
    "source": [
-    "m = plot_geodataframes(res_primary_segments[[\"id\",\"subtype\",\"geometry\"]],popup_columns=[\"subtype\"])"
+    "m = plot_geodataframes(res_primary_segments[[\"id\",\"subtype\",\"geometry\"]],popup_columns=[\"subtype\"])\n",
+    "m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
+   "metadata": {"nbsphinx": "hidden"},
    "outputs": [
     {
      "data": {
